--- a/themes/hugo-hero-theme/assets/scss/_bootstrap-variables.scss
+++ b/themes/hugo-hero-theme/assets/scss/_bootstrap-variables.scss
@@ -17,7 +17,7 @@ $grid-gutter-width: 20px;
 
 $white: #ffffff;
 $black: #000000;
-$primary: #d31c37;
+$primary: #790817;
 $secondary: #eca706;
 
 // Links
