--- a/themes/hugo-hero-theme/assets/scss/bootstrap/_variables.scss
+++ b/themes/hugo-hero-theme/assets/scss/bootstrap/_variables.scss
@@ -9,10 +9,10 @@
 //
 
 // stylelint-disable
-$white:    #fff !default;
+$white: #d71e1e !default;
 $gray-100: #f8f9fa !default;
 $gray-200: #e9ecef !default;
-$gray-300: #dee2e6 !default;
+$gray-300: #c6142c !default;
 $gray-400: #ced4da !default;
 $gray-500: #adb5bd !default;
 $gray-600: #6c757d !default;
