--- a/themes/hugo-hero-theme/layouts/partials/sub-footer.html
+++ b/themes/hugo-hero-theme/layouts/partials/sub-footer.html
@@ -4,9 +4,10 @@
       <div class="col-12">
         <div class="sub-footer-inner">
           <ul>
-            <li><strong>Phone: </strong>{{ .Site.Data.contact.phone }}</li>
-            <li><strong>Email: </strong><a href="mailto:{{ .Site.Data.contact.email }}">
-                {{ .Site.Data.contact.email }}</a></li>
+            <li><strong>Email: </strong><a>teamfaraday@gmail.com</a></li>
+
+            <li><strong>GitHub: </strong><a href="https://github.com/teamfaraday">
+              Team Faraday Robotics</a></li>
           </ul>
           <ul>
           </ul>
