--- a/themes/hugo-hero-theme/layouts/partials/sub-footer.html
+++ b/themes/hugo-hero-theme/layouts/partials/sub-footer.html
@@ -4,7 +4,7 @@
       <div class="col-12">
         <div class="sub-footer-inner">
           <ul>
-            <li><strong>Email: </strong><a>teamfaraday@gmail.com</a></li>
+            <li><strong>Email: </strong><a>robotfaraday@gmail.com</a></li>
 
             <li><strong>GitHub: </strong><a href="https://github.com/teamfaraday">
               Team Faraday Robotics</a></li>
