Video added, certain things fixed.

--- a/themes/hugo-hero-theme/assets/scss/bootstrap/_code.scss
+++ b/themes/hugo-hero-theme/assets/scss/bootstrap/_code.scss
@@ -11,6 +11,7 @@ code {
   font-size: $code-font-size;
   color: $code-color;
   word-break: break-word;
+  text-align: center;
 
   // Streamline the style when inside anchors to avoid broken underline and more
   a > & {
