--- a/themes/hugo-hero-theme/layouts/contact/contact.html
+++ b/themes/hugo-hero-theme/layouts/contact/contact.html
@@ -18,8 +18,8 @@
       {{ .Content }}
       <ul>
         <li><strong>School Mailing Address: </strong>Insert Mailing Address</li>
-        <li><strong>Team Email: </strong><a href="mailto:devammondal06@gmail.com">
-           test</a></li>
+        <li><strong>Team Email: </strong><a href="mailto:robotfaraday@gmail.com">
+           robotfaraday@gmail.com</a></li>
         {{ if .Site.Data.contact.address }}
         <li style="white-space: pre-wrap;"><strong>Address: </strong><br>{{ .Site.Data.contact.address }}</li>
         {{ end }}
