--- a/themes/hugo-hero-theme/assets/scss/bootstrap/utilities/_text.scss
+++ b/themes/hugo-hero-theme/assets/scss/bootstrap/utilities/_text.scss
@@ -6,7 +6,7 @@
 
 // Alignment
 
-.text-justify  { text-align: justify !important; }
+.text-justify  { text-align: center !important; }
 .text-nowrap   { white-space: nowrap !important; }
 .text-truncate { @include text-truncate; }
 
@@ -16,8 +16,8 @@
   @include media-breakpoint-up($breakpoint) {
     $infix: breakpoint-infix($breakpoint, $grid-breakpoints);
 
-    .text#{$infix}-left   { text-align: left !important; }
-    .text#{$infix}-right  { text-align: right !important; }
+    .text#{$infix}-left   { text-align: center !important; }
+    .text#{$infix}-right  { text-align: center !important; }
     .text#{$infix}-center { text-align: center !important; }
   }
 }
