--- a/themes/hugo-hero-theme/assets/scss/pages/services/_page-services-single.scss
+++ b/themes/hugo-hero-theme/assets/scss/pages/services/_page-services-single.scss
@@ -6,11 +6,13 @@
         line-height: 1.5;
         margin-bottom: 40px;
         font-weight: 300;
+        text-align: center;
         @include media-breakpoint-up(md) {
           font-size: 1.4rem;
           line-height: 1.4;
           margin-bottom: 40px;
           font-weight: 300;
+          text-align: center;
         }
       }
     }
