--- a/themes/hugo-hero-theme/layouts/pages/about.html
+++ b/themes/hugo-hero-theme/layouts/pages/about.html
@@ -12,7 +12,7 @@
 <div class="strip bg-cover bg-position-top bg-overlay" style="background-image: url('{{ .Params.background | relURL }}');">
   <div class="container pt-17 pb-17">
     <div class="row">
-      <div class="col-12 col-md-6 {{ if eq .Params.align "right" }}offset-md-6{{ end }}">
+      <div class="col-12 col-md-6 {{ if eq .Params.align "left" }}offset-md-6{{ end }}">
         <h2 class="text-primary text-capitalize">{{ .Title }}</h2>
         {{ .Content }}
         {{ if .Params.button }}
